--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,13 +38,10 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=""
 
-#module.mongo=${play.path}/modules/mongo
-
-#mongo.host=mongo-takadayuichi-db-0.azva.dotcloud.net
-#mongo.port=51406
-#mongo.database=vote
-#mongo.username=vote
-#mongo.password=kein1980
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/vote"
+db.default.user=root
+db.default.password=root
 
 # Evolutions
 # ~~~~~
